# Hangover

./: .env.example  .gitignore  ARCHITECTURE_SANDBOX.md  CAUGHT.md  EVAL.md  LICENSE  LIVE_COGNEE_DEMO.md  PROOF.md  README.md  cognee_client.py  config.py  contradiction.py  git_io.py  github.py  index.html  ingest.py  llm.py  memory_registry.json  pyproject.toml  reconcile.py  registry.py  requirements.txt  spike.py
.github/workflows/: codemind-ingest.yml  codemind-pr.yml  codemind-reconcile.yml
codemind/: __init__.py  cli.py  dashboard.py  lifecycle_spike.py  memory_policy.py  onboarding.py
codemind/runtime/: __init__.py  cognee_client.py  contradiction.py  git_io.py  github.py  ingest.py  llm.py  reconcile.py  registry.py  spike.py
codemind/templates/: __init__.py  codemind-ingest.yml  codemind-pr.yml  codemind-reconcile.yml
dashboard/: build.py
scratch/: cache.ts  in_memory_cache.ts
scripts/: audit_repo.py  cognee_cloud_demo.py  cross_repo_proof.py  require_codemind_check.sh  reset_demo_graph.sh  run_demo.sh  seed_demo_repo.sh  setup.sh  setup_cross_repo.sh  spike_lifecycle.py
tests/: test_cli.py  test_codemind.py
