[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemind"
version = "0.1.0"
description = "CodeMind CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "cognee>=1.0.0",
  "openai>=1.50.0",
  "pydantic>=2.0",
  "gitpython>=3.1",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
]

[project.scripts]
codemind = "codemind.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
codemind = ["templates/*.yml"]

[tool.setuptools.packages.find]
include = ["codemind*"]
